--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,9 @@
     "scripts": ["background.js"],
     "persistent": false
   },
+  "page-action": {
+    "default_popup": "popup.html"
+  },
   "manifest_version": 2
 }
 
