--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "scripts": ["background.js"],
     "persistent": false
   },
-  "page-action": {
+  "page_action": {
     "default_popup": "popup.html",
     "default_icon": {
       "16": "images/get_started16.png",
