--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,8 @@
   "version": "1.0",
   "description": "Build an Extension!",
   "permissions": [
-    "storage"
+    "storage",
+    "declarativeContent"
   ],
   "background": {
     "scripts": [
